--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,7 +55,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: touch ./.env
+      - run: touch ./.env.production
       - name: Install Dependencies 
         run: npm ci 
       - name: Build Static Website
@@ -77,7 +77,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: touch ./.env
+      - run: touch ./.env.production
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -107,7 +107,7 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-region: ${{secrets.AWS_REGION}}
-      - run: touch ./.env
+      - run: touch ./.env.production
       - uses: actions/download-artifact@v3
         with:
           name: build
