--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,15 +65,16 @@ jobs:
       - run: touch ./.env.production
       - name: Install Dependencies 
         run: npm ci 
-      - name: Configure Amplify Instance
-        uses: ambientlight/amplify-cli-action@0.2.1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-            amplify_command: configure
-            amplify_env: 'dev'
-        env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_REGION: ${{secrets.AWS_REGION}}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{secrets.AWS_REGION}}
+      - name: Install AWS Amplify CLI
+        run: npm install -g @aws-amplify/cli
+      - name: Confirm Amplify installed and check version   
+        run: amplify
       - name: Build Static Website
         run: npm run build
       - uses: actions/upload-artifact@v3
