--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,19 +62,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: touch ./.env.production
       - name: Install Dependencies 
-        run: npm ci 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{secrets.AWS_REGION}}
-      - name: Install AWS Amplify CLI
-        run: npm install -g @aws-amplify/cli
-      - name: Confirm Amplify installed and check version   
-        run: amplify
+        run: npm ci
+      - run: npm install
+      - run: touch ./src/aws-exports.js
+      - run: CI=false npm run build --if-present
       - name: Build Static Website
         run: npm run build
       - uses: actions/upload-artifact@v3
