--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
+      - name: Check vulnerabilities in the code
+        run: npm run snyk
+      - name: Run Snyk to check for general vulnerabilities
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
