--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,9 +45,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+      - name: Install Dependencies 
+        run: npm ci
       - name: Check vulnerabilities in the code
         run: npm run snyk
-      - name: Run Snyk to check for general vulnerabilities
+      - name: Run Snyk to check for open source vulnerabilities
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
