--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,14 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout/@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-      - name: Install Dependencies 
-        run: npm ci
+        uses: actions/checkout@master
       - name: Check vulnerabilities in the code
         run: npm run snyk
       - name: Run Snyk to check for open source vulnerabilities
@@ -51,7 +44,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=low
+          args: code test --severity-threshold=low
  # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
