--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,14 +35,15 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: Run Snyk to check for open source vulnerabilities
-        uses: snyk/actions/node@master
+      - uses: actions/checkout@master
+      - uses: snyk/actions/setup@master
+      - uses: actions/setup-go@v1
+        with:
+          go-version: '1.13'
+      - name: Snyk monitor
+        run: snyk code test
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: code test --severity-threshold=low
  # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
