--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,8 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: snyk/actions/setup@master
-      - uses: actions/setup-go@v1
+      - uses: snyk/actions/node@master
         with:
           go-version: '1.13'
       - name: Snyk monitor
