--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,6 +37,8 @@ jobs:
     env:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
     steps:
+      - name: Checkout
+        uses: actions/checkout/@v3
       - name: Set up Node 14
         uses: actions/setup-node@v3
         with:
